fixed issue with alignment of button in listing view

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_listing.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_listing.scss
@@ -368,8 +368,21 @@ ul.listing {
                 border-color: $color-teal-darker;
             }
 
+            &:active {
+                color: $color-white;
+                background: #333;
+                border-color: #333;
+            }
+
             &.bicolor {
                 background: $color-teal-darker;
+                border: solid 1px darken($color-teal-darker, 10%);
+
+                &:active {
+                    color: $color-white;
+                    background: #484848;
+                    border-color: #333;
+                }
             }
         }
     }
