--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_typography.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_typography.scss
@@ -41,7 +41,7 @@ p {
 }
 
 a {
-    @include transition(color 0.2s ease, background-color 0.2s ease);
+    // @include transition(color 0.2s ease, background-color 0.2s ease);
     outline: none;
     color: $color-link;
     text-decoration: none;
