--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/core.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/core.scss
@@ -118,7 +118,7 @@ body {
 }
 
 footer {
-    @include transition(all 0.2s ease);
+    // @include transition(all 0.2s ease);
     @include transition(bottom 0.5s ease 1s);
     @include row();
     border-radius: 3px 3px 0 0;
@@ -492,10 +492,10 @@ footer,
 .nav-toggle,
 footer,
 .logo {
-    @include transition(all 0.2s ease);
+    // @include transition(all 0.2s ease);
 }
 
-.nav-main a,
-a {
-    @include transition(color 0.2s ease, background-color 0.2s ease);
-}
+// .nav-main a,
+// a {
+    // @include transition(color 0.2s ease, background-color 0.2s ease);
+// }
